--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://creative.watch/'
+baseURL = 'https://web-91h.pages.dev'
 languageCode = 'en-us'
 title = 'Creative Watch'
 theme = "archie"
